moved code to be single app with panels and included bar plot from input file

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
     #main{
       margin-left: auto;
       margin-right: auto;
-      padding-left: 20px;
       float: left;
       line-height: 24px;
     }
@@ -72,7 +71,6 @@
       width: 1000px;
       margin-left: auto;
       margin-right: auto;
-      padding-left: 10px;
       border-left: 1px solid #AAA;
     }
     #shiny iframe {
@@ -106,17 +104,12 @@
     </div>
     <div id="content">
       <div id="main">
-        <iframe src="./cheripic/upload_file" style="border: 1px solid #FFF; max-width: 1000px; width: 1000px; height: 500px"></iframe>
+        <iframe src="./cheripic" style="border: 1px solid #FFF; max-width: 1024px; width: 1024px; height: 2000px"></iframe>
         <div class="caption">
           When Shiny is properly configured on your server, you'll see a upload file Shiny app above.
-        </div>
-        <iframe src="./cheripic/download_file" style="border: 1px solid #FFF; max-width: 1000px; width: 1000px; height: 500px"></iframe>
-        <div class="caption">
-          When Shiny is properly configured on your server, you'll see a download file Shiny app above.
         </div>
       </div>
     </div>
   </div>
 </body>
 </html>
-
