include navbar Menu tab with a link to about page

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     </div>
     <div id="content">
       <div id="main">
-        <iframe src="./cheripic" style="border: 1px solid #FFF; max-width: 1024px; width: 1024px; height: 600px"></iframe>
+        <iframe src="./cheripic" style="border: 1px solid #FFF; max-width: 1024px; width: 1024px; height: 700px"></iframe>
         <div class="caption">
-          When Shiny is properly configured on your server, you'll see a upload file Shiny app above.
+          Shiny interactive app for plotting and selecting variants.
         </div>
       </div>
     </div>
